# stromausfall-pfalzwerke

./: .gitignore  README.md  cabal.project  fix-cabal-fmt.sh  scrape.sh
.github/workflows/: .ci-linux.yaml  ci-linux.yaml
data/2022-11-23/: 3883269.json
data/2023-09-20/: 3883268.json
data/2023-09-21/: 3882643.json  3882644.json  3882645.json  3882646.json  3882647.json  3882648.json  3882652.json  3882653.json  3882654.json  3882655.json  3882656.json  3882657.json  3882658.json  3882659.json  3882660.json  3882661.json  3882662.json  3882663.json  3882664.json  3882670.json  3882671.json  3882672.json  3882673.json  3882674.json  3882675.json  3882676.json  3882677.json  3882678.json  3882679.json  3882680.json  3882681.json  3882682.json  3882683.json  3882684.json  3882685.json  3882693.json  3882694.json  3882695.json  3882696.json  3882697.json  (+469 more)
data/2023-09-22/: 3881890.json  3882814.json  3883270.json  3883271.json  3883272.json  3883273.json  3883274.json  3883275.json  3883276.json  3883278.json  3883279.json  3883280.json  3883281.json  3883282.json  3883283.json  3883284.json  3883285.json  3883286.json  3883287.json  3883288.json  3883289.json  3883290.json  3883291.json  3883292.json  3883293.json  3883329.json  3883330.json  3883331.json  3883332.json  3883333.json  3883337.json  3883339.json  3883340.json  3883341.json  3883342.json  3883347.json  3883348.json  3883349.json  3883350.json  3883351.json  (+231 more)
data/2023-09-25/: 3883538.json
data/2023-09-26/: 3883469.json
data/2023-09-27/: 3883373.json  3883374.json
data/2023-09-28/: 3883376.json
data/2023-10-10/: 3883435.json
data/2023-10-11/: 3883475.json
src/scraper/: pw-scraper.cabal
src/scraper/app/: Main.hs
src/scraper/lib/: Scraper.hs
src/scraper/lib/Scraper/: Command.hs  Sqlite.hs  Types.hs
