cabal-version: 2.2
name:          pw-scraper
version:       0.2.0.0
synopsis:      JS API scraper
license-file:  LICENSE
license:       Apache-2.0
author:        Jann Müller <j-mueller@users.noreply.github.com>
maintainer:    Jann Müller <j-mueller@users.noreply.github.com>
copyright:     (c) 2024 Jann Müller
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving

  other-extensions:
    ConstrainedClassMethods
    DeriveAnyClass
    ExistentialQuantification
    FlexibleInstances
    GADTs
    MonadComprehensions
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  lib
  exposed-modules:
    Scraper
    Scraper.Command
    Scraper.Sqlite
    Scraper.Types

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , beam-core
    , beam-migrate
    , beam-sqlite
    , bytestring
    , directory
    , filepath
    , lens
    , optparse-applicative
    , req
    , resource-pool         >=0.3.1.0  && <0.4.0.0
    , sqlite-simple         >=0.4.18.2
    , streaming
    , text
    , time

executable pw-scraper
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts
  build-depends:
    , base
    , pw-scraper
